[tool.poetry]
name = "geospatial-agent"
version = "0.1.0"
description = ""
authors = ["Amazon Location Team"]
readme = "README.md"
packages = [{ include = "geospatial_agent" }]

[tool.poetry.dependencies]
python = ">= 3.10.13, <= 3.11.5"
langchain = "^0.1.0"
python-json-logger = "^2.0.7"
click = "^8.1.6"
networkx = "^3.1"
pydot = "^1.4.2"
matplotlib = "^3.7.2"
pydispatcher = "^2.0.7"
contextily = "^1.3.0"
mapclassify = "^2.6.0"
pydeck = { extras = ["jupyter"], version = "^0.8.0" }
idna = "^3.4"
anyio = "^3.7.1"
importlib-metadata = "^6.8.0"
sniffio = "^1.3.0"
typing-extensions = "^4.7.1"
zipp = "^3.16.2"
geopandas = "^0.13.2"
pygments = "^2.16.1"
boto3 = "^1.28.63"
botocore = "^1.31.63"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
assertpy = "^1.1"
coverage = "^7.3.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
agent = "geospatial_agent.cli.main:main"
